--- a/Notes.html
+++ b/Notes.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Ying Jin" />
 
-<meta name="date" content="2025-06-18" />
+<meta name="date" content="2025-07-08" />
 
 <title>Development notes</title>
 
@@ -239,7 +239,7 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 
 <h1 class="title toc-ignore">Development notes</h1>
 <h4 class="author">Ying Jin</h4>
-<h4 class="date">2025-06-18</h4>
+<h4 class="date">2025-07-08</h4>
 
 
 
@@ -254,17 +254,49 @@ become possible, because it is not possible to calculate the difference
 between configuration.</p>
 <p>We could potentially calculate the difference of nodes that exist in
 both slices.</p>
+<p>For “empty slices”, where no data is available for plot, we could
+skip this slide and penalize the difference between the two adjacent
+non-empty slices instead.</p>
 </div>
 <div id="splines-mds" class="section level2">
 <h2>Splines MDS</h2>
-</div>
-</div>
-<div id="visual-improvments" class="section level1">
-<h1>Visual improvments</h1>
 <ul>
-<li>Automatically create time index</li>
-<li>Variable selection to include/exclude in the graph</li>
-<li>Smaller label font, transparent nodes</li>
+<li>The time may not be a regular grid. For Spline basis, we cannot use
+time index. We need to use the original time grid</li>
+<li>How to initialize layout, since the first slice may have missing
+variables</li>
+<li>For sub network plot, what if all of the variables selected are
+missing? It’s gonna through error.</li>
+</ul>
+</div>
+</div>
+<div id="app-improvments" class="section level1">
+<h1>App improvments</h1>
+<ol style="list-style-type: decimal">
+<li><p>Automatically create time index</p></li>
+<li><p>Variable and time slice summary on first page</p></li>
+<li><p>Time for computation</p></li>
+<li><p>normalization: How to standardize longitudinal data?</p></li>
+</ol>
+<p>5: Summary: how to summary longtiudinal/non-longitudinal
+variables?</p>
+<ol start="6" style="list-style-type: decimal">
+<li>For now all the variables are still assumed to be numeric. What if
+we would like to include categorical variables</li>
+</ol>
+<ul>
+<li>What type of correlation? How to code the values?</li>
+<li>How to write</li>
+</ul>
+</div>
+<div id="journal" class="section level1">
+<h1>Journal</h1>
+<p><a href="https://www.jstatsoft.org/mission">Journal of statistical
+software</a></p>
+<ul>
+<li>Case study</li>
+<li>Reproducible code</li>
+<li>Comparison to existing implementaion</li>
 </ul>
 </div>
 
